<resources>


    <!-- Strings Main Fragment -->
    <string name="main_fragment_title">Inicio</string>
    <string name="app_name">CréditoS</string>

    <!-- Strings Home Fragment -->
    <string name="home_fragment_label">Credit APP</string>
    <string name="home_mensage_block_value">você tem %1$s em análise</string>
    <string name="home_mensage_free_value"> %1$s </string>

    <!-- Strings cadastro Fragment -->
    <string name="cadastro_fragment_label">Cadastro</string>
    <string name="cadastro_fragment_btn">Cadastrar</string>
    <string name="erro_first_name_cadastro">Campo nome não preenchido</string>
    <string name="erro_last_name">O sobre-nome não pode ser vazio,preencha o campo</string>
    <string name="erro_cpf_field">O cpf não pode ser vazio,verifique os dados</string>
    <string name="erro_income_field">valor da renda inválida,verifique os dados</string>
    <string name="erro_email_field">Digite um email válido</string>
    <string name="erro_cep_field">Cep inválido</string>
    <string name="erro_street_field">Campo inválido</string>
    <string name="erro_password_field">A senha deve conter mais de 6 caracteres,verifique os dados</string>

    <!-- Strings Login Fragment -->
    <string name="hello_blank_fragment">Login Fragment</string>
    <string name="erro_massage_invalid_email">email inválido</string>
    <string name="login_fragment_label">Login</string>
    <string name="erro_message_invalid_password">senha inválido</string>
    <string name="login">login</string>

    <!-- Strings create credit -->
    <string name="credit_create_fragment_title">Empréstimo</string>
    <string name="credit_create_txv_quanto_precisa">Olá %1$s de quanto você precisa?</string>
    <string name="credit_create_txt_btn_proximo_passo">proximo passo"</string>

    <!-- Strings create credit date -->
    <string name="credit_create_date_chose_date_installment_txt">Agora,escolha em qual data é melhor para pagamento das parcelas</string>
    <string name="credit_create_date_number_installment_txt">e em quantas vezes desaja pagar ?</string>
    <string name="credit_create_date_number_selected">Data do pagamento %1$d/%2$d/%3$d</string>

    <!-- Strings create credit date end -->
    <string name="credit_create_end_confirme_txt_button">Confirmar Proposta</string>
    <string name="conta_txt">Conta</string>
    <string name="cep_inexistente_erro">Cep Inexistente</string>
    <string name="credito_invalido">Valor do Crédito inválido</string>
    <string name="numero_de_parcela_est_invalido">Numero de parcela está inválido</string>
    <string name="data_invalido">Data inválido</string>
    <string name="valid_credit_customer_erro">Customer inexistente</string>
    <string name="title_activity_payment">PaymentActivity</string>
    <string name="alert_mensage_pedido_analise">Seu pedido está em Análise</string>


</resources>