<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_user_accers"
    android:label="@string/home_fragment_label"
    app:startDestination="@id/mainFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.analyze_credit_system_mobile.view.activity.fragments.LoginFragment"
        android:label="@string/login_fragment_label"
        tools:layout="@layout/fragment_login"
        >
        <action
            android:id="@+id/action_loginFragment_to_cadastroFragment"
            app:destination="@id/cadastroFragment"
            app:enterAnim="@anim/enter_anime"
            app:popEnterAnim="@anim/login_enter"
            app:popExitAnim="@anim/anime_pop"
            />
        <action
            android:id="@+id/action_loginFragment_to_homeFragment"
            app:destination="@+id/homeFragment"
           />
        <action
            android:id="@+id/action_loginFragment_to_createCreditFragment"
            app:destination="@id/createCreditFragment" />
    </fragment>
    <fragment
        android:id="@+id/cadastroFragment"
        android:name="com.example.analyze_credit_system_mobile.view.activity.fragments.CadastroFragment"
        android:label="@string/cadastro_fragment_label"
        tools:layout="@layout/fragment_cadastro">
        <action
            android:id="@+id/action_cadastroFragment_to_loginFragment"
            app:destination="@id/loginFragment"

            />
    </fragment>
    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.analyze_credit_system_mobile.view.activity.fragments.HomeFragment"
        android:label="@string/conta_txt"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_homeFragment_to_loginFragment"
            app:destination="@id/loginFragment" />
        <argument
            app:argType="string"
            android:name="name_user"
            android:defaultValue="No user"
            app:nullable="true" />
        <action
            android:id="@+id/action_homeFragment_to_paymentActivity"
            app:destination="@id/paymentActivity" />

    </fragment>
    <fragment
        android:id="@+id/mainFragment"
        android:name="com.example.analyze_credit_system_mobile.view.activity.fragments.MainFragment"
        android:label="@string/main_fragment_title"
        tools:layout="@layout/fragment_main" >

    </fragment>
    <fragment
        android:id="@+id/createCreditFragment"
        android:name="com.example.analyze_credit_system_mobile.view.activity.fragments.CreateCreditFragment"
        android:label="@string/credit_create_fragment_title"
        tools:layout="@layout/fragment_create_credit" >
        <action
            android:id="@+id/action_createCreditFragment_to_navigation_graph"
            app:destination="@id/navigationGraphCradit"/>
        <action
            android:id="@+id/action_createCreditFragment_to_loginFragment"
            app:enterAnim="@anim/login_enter"
            app:destination="@id/loginFragment" />
    </fragment>
    <navigation
        android:id="@+id/navigationGraphCradit"
        app:startDestination="@id/createCreditDateFragment">
        <fragment
            android:id="@+id/createCreditDateFragment"
            android:name="com.example.analyze_credit_system_mobile.view.activity.fragments.CreateCreditDateFragment"
            android:label="@string/credit_create_fragment_title"
            tools:layout="@layout/fragment_create_credit_date" >
            <action
                android:id="@+id/action_createCreditDateFragment_to_createCreditEndFragment"
                app:destination="@id/createCreditEndFragment" />
            <argument
                 app:argType="string"
                 app:nullable="false"
                 android:name="creditValue"
                android:defaultValue="0"
                />
            <argument
                android:name="customer"
                app:nullable="false"
                app:argType="com.example.analyze_credit_system_mobile.view.model.CustomerView" />
        </fragment>

        <fragment
            android:id="@+id/createCreditEndFragment"
            android:name="com.example.analyze_credit_system_mobile.view.activity.fragments.CreateCreditEndFragment"
            android:label="@string/credit_create_fragment_title"
            tools:layout="@layout/fragment_create_credit_end" >

            <argument
                android:name="creditCreateView"
                app:argType="com.example.analyze_credit_system_mobile.view.model.CreditCreateView" />
        </fragment>

        <argument
            app:argType="com.example.analyze_credit_system_mobile.view.model.CustomerView"
            app:nullable="false"
            android:name="customer"
            />

        <argument
            app:argType="string"
            app:nullable="false"
            android:name="creditValue"
            android:defaultValue="100.00"
            />
        <action
            android:id="@+id/action_global_createCreditDateFragment"
            app:destination="@id/createCreditDateFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            />
    </navigation>
    <fragment
        android:id="@+id/creditListFragment"
        android:name="com.example.analyze_credit_system_mobile.view.activity.fragments.tbafragments.CreditListFragment"
        android:label="fragment_credit_list"
        tools:layout="@layout/fragment_credit_list" />
    <activity
        android:id="@+id/paymentActivity"
        android:name="com.example.analyze_credit_system_mobile.view.activity.PaymentActivity"
        android:label="PaymentActivity" >
        <argument
            android:name="customerView"
            app:argType="com.example.analyze_credit_system_mobile.view.model.CustomerView" />
        <argument
            android:name="typePaymentTitle"
            app:argType="string" />
    </activity>
</navigation>